--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,12 @@ button {
     font-weight: 600;
     padding: 13.5px 29px;
 }
+
+button:hover {
+    cursor: pointer;
+}
+
+a, a:visited {
+    color: inherit;
+    text-decoration: none;
+}
