--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,17 @@ a, a:visited {
     color: inherit;
     text-decoration: none;
 }
+
+input[type=text] {
+    background-color: transparent;
+    border: 0;
+    border-bottom: 1px solid black;
+    font-family: inherit;
+    font-size: 36px;
+    font-weight: 700;
+    height: 54px;
+}
+
+input:focus {
+    outline:none;
+}
