--- a/src/App.css
+++ b/src/App.css
@@ -28,16 +28,25 @@ a, a:visited {
     text-decoration: none;
 }
 
-input[type=text] {
-    background-color: transparent;
-    border: 0;
-    border-bottom: 1px solid black;
-    font-family: inherit;
-    font-size: 36px;
-    font-weight: 700;
-    height: 54px;
+.backdrop {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: rgb(0, 0, 0, .5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    transform: 1s;
 }
 
-input:focus {
-    outline:none;
+.modal {
+    background-color: white;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
