--- a/src/components/ActivityDetail/ActivityDetail.css
+++ b/src/components/ActivityDetail/ActivityDetail.css
@@ -14,13 +14,25 @@
     display: block;
     height: 32px;
     width: 32px;
-    /* margin: 0 19px 0 0; */
 }
 
 .activity-detail-name {
     font-size: 36px;
     font-weight: 700;
-    /* margin: 0 19px 0 0; */
+}
+
+.activity-title input[type=text] {
+    background-color: transparent;
+    border: 0;
+    border-bottom: 1px solid black;
+    font-family: inherit;
+    font-size: 36px;
+    font-weight: 700;
+    height: 54px;
+}
+
+.activity-title input:focus {
+    outline:none;
 }
 
 .edit {
