--- a/src/components/AddItemListModal/AddItemListModal.css
+++ b/src/components/AddItemListModal/AddItemListModal.css
@@ -69,7 +69,7 @@
     padding: 14px 17px;
 }
 
-.selected-priority {
+.priority-group {
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -133,11 +133,23 @@
     cursor: pointer;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     font-size: 16px;
     font-weight: 400;
     height: 52px;
     width: 205px;
     padding: 14px 17px;
+}
+
+.priority-option:first {
+    display: flex;
+}
+
+.check {
+    background-image: url(/src/assets/img/check.svg);
+    display: block;
+    height: 18px;
+    width: 18px;
 }
 
 .priority-option:last-child {
