--- a/src/components/AddItemListModal/AddItemListModal.css
+++ b/src/components/AddItemListModal/AddItemListModal.css
@@ -1,11 +1,11 @@
 
-.item-list-modal {
+.add-item-list-modal {
     background-color: white;
     height: 403px;
     width: 830px;
 }
 
-.item-list-modal .modal-header {
+.add-item-list-modal .modal-header {
     border-bottom: 1px solid #E5E5E5;
     display: flex;
     font-size: 18px;
@@ -24,7 +24,7 @@
     width: 24px;
 }
 
-.item-list-modal .modal-body {
+.add-item-list-modal .modal-body {
     display: flex;
     flex-direction: column;
     padding: 38px 41px 23px 30px;
@@ -38,7 +38,7 @@
     margin-bottom: 9px;
 }
 
-#item-list-name {
+.item-list-name {
     border: 1px solid #E5E5E5;
     border-radius: 6px;
     font-size: 16px;
@@ -48,7 +48,7 @@
     width: 100%;
 }
 
-#item-list-name:focus {
+.item-list-name:focus {
     outline: 1px solid #16ABF8;
 }
 
@@ -156,7 +156,7 @@
     border-radius: 0 0 6px 6px;
 }
 
-.item-list-modal .modal-footer {
+.add-item-list-modal .modal-footer {
     border-top: 1px solid #E5E5E5;
     display: flex;
     justify-content: flex-end;
